Migrate controller and action references

--- a/src/Wallabag/CoreBundle/Resources/views/themes/baggy/Entry/entry.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/baggy/Entry/entry.html.twig
@@ -92,7 +92,7 @@
                 {% endfor %}
                 </div>
                 <div class="input-field baggy-add-tag" style="display: none">
-                    {{ render(controller("WallabagCoreBundle:Tag:addTagForm", {'id': entry.id})) }}
+                    {{ render(controller('Wallabag\\CoreBundle\\Controller\\TagController::addTagFormAction', {'id': entry.id})) }}
                 </div>
             </aside>
         </div>
