--- a/src/Wallabag/CoreBundle/Resources/views/themes/baggy/Entry/new.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/baggy/Entry/new.html.twig
@@ -3,5 +3,5 @@
 {% block title %}{{ 'entry.new.page_title'|trans }}{% endblock %}
 
 {% block content %}
-    {{ render(controller("WallabagCoreBundle:Entry:addEntryForm")) }}
+    {{ render(controller('Wallabag\\CoreBundle\\Controller\\EntryController::addEntryFormAction')) }}
 {% endblock %}
