--- a/src/Wallabag/CoreBundle/Resources/views/Entry/_card_preview.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/Entry/_card_preview.html.twig
@@ -18,7 +18,7 @@
         <i class="card-title activator grey-text text-darken-4 material-icons right">clear</i>
         <span class="card-title">
             <a href="{{ path('view', {'id': entry.id}) }}" title="{{ entry.title|striptags|e('html_attr') }}">
-                {{ entry.title|striptags|truncate(80, true, '…')|raw }}
+                {{ entry.title|striptags|u.truncate(80, '…', false)|raw }}
             </a>
         </span>
 
