fix for config links

--- a/src/Wallabag/CoreBundle/Resources/views/Config/index.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/Config/index.html.twig
@@ -45,7 +45,7 @@
                                     {{ form_label(form.config.reading_speed) }}
                                     <p>
                                         {{ 'config.form_settings.reading_speed.help_message'|trans }}
-                                        <a href="https://wallabag.github.io/myreadspeed/">myreadspeed</a>
+                                        <a target="_blank" href="https://wallabag.github.io/myreadspeed/">myreadspeed</a>
                                     </p>
                                 </div>
                                 <div class="input-field col s1">
@@ -83,7 +83,7 @@
                                     {{ form_label(form.config.pocket_consumer_key) }}
                                     <p>
                                         &raquo;
-                                        <a href="https://getpocket.com/developer/docs/authentication">https://getpocket.com/developer/docs/authentication</a>
+                                        <a target="_blank" href="https://getpocket.com/developer/docs/authentication">https://getpocket.com/developer/docs/authentication</a>
                                     </p>
                                 </div>
                                 <div class="input-field col s1">
