--- a/src/Wallabag/CoreBundle/Resources/views/Entry/_feed_link.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/Entry/_feed_link.html.twig
@@ -9,4 +9,4 @@
     {% set feed_route = feed_route ~ '_feed' %}
     {% set slug = null %}
 {% endif %}
-<a rel="alternate" type="application/atom+xml" href="{{ path(feed_route, {'username': app.user.username, 'token': app.user.config.feedToken, 'slug': slug}) }}" class="right"><i class="material-icons">rss_feed</i></a>
+<a rel="alternate" type="application/atom+xml" href="{{ path(feed_route, {'username': app.user.username, 'token': app.user.config.feedToken, 'slug': slug}) }}" class="results-item"><i class="material-icons">rss_feed</i></a>
