--- a/app/Resources/static/themes/material/css/dark_theme.scss
+++ b/app/Resources/static/themes/material/css/dark_theme.scss
@@ -1,6 +1,8 @@
 .dark-theme {
-  body,
-  main #content,
+  body {
+    background-color: #101010;
+  }
+
   #article,
   .card,
   .card-panel,
@@ -10,8 +12,6 @@
   .collapsible-header,
   .collection,
   .dropdown-content,
-  .nav-panel-add,
-  .nav-panel-search,
   .side-nav,
   .side-nav .collapsible-body,
   .side-nav.fixed .collapsible-body,
@@ -50,7 +50,7 @@
     background-color: #272727;
   }
 
-  main #content,
+  #content,
   #article article,
   #article article h1,
   #article article h2,
@@ -68,7 +68,9 @@
 
   .cyan,
   .cyan.darken-1,
-  .cyan.darken-2 {
+  .cyan.darken-2,
+  .nav-panel-add,
+  .nav-panel-search {
     background-color: #1d1d1d !important;
   }
 
