--- a/src/Wallabag/CoreBundle/Resources/views/Entry/entries.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/Entry/entries.html.twig
@@ -46,22 +46,21 @@
     </div>
 
     {% if entries.count > 0 %}
-        <input id="mass-action-inputs-displayed" class="mass-action-inputs-displayed" type="checkbox" />
-        <div class="mass-buttons">
-            <span>
+        <input id="mass-action-inputs-displayed" class="toggle-checkbox" type="checkbox" />
+        <div class="mass-action">
+            <div class="mass-action-group">
                 <input type="checkbox" class="entry-checkbox-input" data-toggle="[data-js='entry-checkbox']" data-js="checkboxes-toggle" />
-            </span>
+                <button class="mass-action-button btn cyan darken-1" type="submit" name="toggle-read" title="{{ 'entry.list.toogle_as_read'|trans }}"><i class="material-icons">done</i></button>
+                <button class="mass-action-button btn cyan darken-1" type="submit" name="toggle-star" title="{{ 'entry.list.toogle_as_star'|trans }}" ><i class="material-icons">star</i></button>
+                <button class="mass-action-button btn cyan darken-1" type="submit" name="delete" onclick="return confirm('{{ 'entry.confirm.delete_entries'|trans|escape('js') }}')" title="{{ 'entry.list.delete'|trans }}"><i class="material-icons">delete</i></button>
+                <label for="mass-action-tags-displayed" class="mass-action-button btn cyan darken-1" type="button" title="{{ 'entry.list.add_tag'|trans }}"><i class="material-icons">label</i></label>
+            </div>
 
-            <span>
-                <button class="btn cyan darken-1" type="submit" name="toggle-read" title="{{ 'entry.list.toogle_as_read'|trans }}"><i class="material-icons">done</i></button>
-                <button class="btn cyan darken-1" type="submit" name="toggle-star" title="{{ 'entry.list.toogle_as_star'|trans }}" ><i class="material-icons">star</i></button>
-                <button class="btn cyan darken-1" type="submit" name="delete" onclick="return confirm('{{ 'entry.confirm.delete_entries'|trans|escape('js') }}')" title="{{ 'entry.list.delete'|trans }}"><i class="material-icons">delete</i></button>
-                <button class="btn cyan darken-1" type="submit" name="tag"><i class="material-icons">label</i></button>
-            </span>
-
-            <span class="input-field inline">
-                <input type="text" name="tags" />
-            </span>
+            <input id="mass-action-tags-displayed" class="toggle-checkbox" type="checkbox" />
+            <div class="mass-action-tags">
+                <input type="text" class="mass-action-tags-input" name="tags" placeholder="{{ 'entry.list.mass_action_tags_input_placeholder'|trans }}" required />
+                <button class="btn cyan darken-1" type="submit" name="tag">Ajouter</button>
+            </div>
         </div>
 
         <ol class="entries {% if list_mode == 1 %}collection{% else %}row entries-row data{% endif %}">
